# maestro

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Contribute.md  Dockerfile  Dockerfile-system-tests  Dockerfile.documentation  README.md  docker-compose.yml  install_mongocxx.sh
.github/workflows/: compilation.yml  documentation.yml  doxygen.yml  format.yml  functional_tests.yml  protect.yml  system-tests.yml  test_cache.yml  unit_tests.yml
cmake/: GoogleTest.cmake  clang-format.cmake  clang-tidy.cmake  cmake-format.cmake  cmake-format.py  doxygen.cmake  functional_tests.cmake  gRPC_cpp.cmake  gTest.cmake  install_gRPC.cmake  install_gRPC.sh  install_mongocxx.sh  libcron.cmake  mongodb.cmake  system_tests.cmake
datasets/: Dockerfile.big-brain-loader
datasets/db_logs/: diskInfo.json  diskWakeup.json  userDiskInfo.json  userDiskUpdate.json
docs/: .gitignore
docs/Doxygen/: Doxyfile.in
env/: local.env  local_unit_tests.env  maestro.env  maestro_build.env  maestro_run.env  system_tests.env  unit_tests.env  unit_tests_build.env  unit_tests_run.env
include/: EventsManager.hpp  clients.hpp  example.h  mongocxx.hpp  schemas.hpp  utils.hpp
scripts/: docker-networks.sh  launch.sh  system-tests.sh  system_tests.sh  unit_tests.sh
src/: main.cpp
src/Clients/Bugle/: BugleClient.cpp  BugleClient.hpp
src/Clients/HardwareMalin/: HardwareMalinClient.cpp  HardwareMalinClient.hpp
src/Clients/Santaclaus/: SantaclausClient.cpp  SantaclausClient.hpp
src/Clients/Vault/: VaultClient.cpp  VaultClient.hpp
src/Clients/VaultCache/: VaultCacheClient.cpp  VaultCacheClient.hpp
src/Cron/DownloadFiles/: DownloadFilesCron.cpp  DownloadFilesCron.hpp
src/Cron/ExpiredDownloadedFiles/: ExpiredDownloadedFilesCron.cpp  ExpiredDownloadedFilesCron.hpp
src/Cron/FileUpload/: FileUploadCron.cpp  FileUploadCron.hpp
src/Cron/Manager/: ManagerCron.cpp  ManagerCron.hpp
src/Cron/RemoveFiles/: RemoveFilesCron.cpp  RemoveFilesCron.hpp
src/Cron/Template/: TemplateCron.cpp  TemplateCron.hpp
src/Exceptions/NotFound/: NotFoundException.cpp  NotFoundException.hpp
src/Exceptions/RequestFailure/: RequestFailureException.cpp  RequestFailureException.hpp
src/File/: FileServer.cpp  FileServer.hpp
src/Schemas/Files/DownloadQueue/: DownloadQueueSchema.cpp  DownloadQueueSchema.hpp
src/Schemas/Files/DownloadedStack/: DownloadedStackSchema.cpp  DownloadedStackSchema.hpp
src/Schemas/Files/RemoveQueue/: RemoveQueueSchema.cpp  RemoveQueueSchema.hpp
src/Schemas/Files/UploadQueue/: UploadQueueSchema.cpp  UploadQueueSchema.hpp
src/Schemas/Mongo/: Mongo.cpp  Mongo.hpp
src/Schemas/Stats/DiskInfo/: DiskInfoSchema.cpp  DiskInfoSchema.hpp
src/Schemas/Stats/DiskWakeup/: DiskWakeupSchema.cpp  DiskWakeupSchema.hpp  StatsDiskWakeupSchema.cpp  StatsDiskWakeupSchema.hpp
src/Schemas/Stats/UserDiskInfo/: StatsUserDiskInfoSchema.cpp  StatsUserDiskInfoSchema.hpp  UserDiskInfoSchema.cpp  UserDiskInfoSchema.hpp
src/Schemas/Template/: TemplateSchema.hpp
src/Schemas/Templates/FileBucket/: TemplateFileBucket.cpp  TemplateFileBucket.hpp
src/Schemas/Templates/Model/: MongoModel.cpp  MongoModel.hpp
src/Schemas/Templates/Schema/: TemplateSchema.cpp  TemplateSchema.hpp
src/Services/Chouf/: ChoufService.cpp  ChoufService.hpp
src/Services/Template/: TemplateService.cpp  TemplateService.hpp
src/Services/UsersBack/: UsersBackService.cpp  UsersBackService.hpp
src/Utils/Date/: Date.cpp  Date.hpp
src/Utils/GrpcStatus/: GrpcStatus.cpp  GrpcStatus.hpp
src/messages/: TemplateMessage.hpp
src/messages/File/FileApproxMetadata/: FileApproxMetadata.cpp  FileApproxMetadata.hpp
src/messages/File/FileMetadata/: FileMetadata.cpp  FileMetadata.hpp
src/messages/File/FilesIndex/: FilesIndex.cpp  FilesIndex.hpp
src/messages/MessagesUtils/: MessagesUtils.cpp  MessagesUtils.hpp
src/messages/TemplateMessage/: TemplateMessage.cpp  TemplateMessage.hpp
tests/functional/scripts/: test_cmake_modules.sh
tests/functional/src/: main.cpp
tests/system/include/: system_tests.hpp
tests/system/src/: main.cpp
tests/system/src/UsersBack/client/: UsersBackClient.cpp  UsersBackClient.hpp
tests/system/src/UsersBack/tests/: UsersBackTests.cpp  UsersBackTests.hpp
tests/system/src/clients/UsersBack/: UsersBackClient.cpp  UsersBackClient.hpp
tests/unit/src/: FileClient.cpp  FileClient.hpp  test.cpp  test_FileServer.cpp
tests/unit/src/Schemas/: DownloadQueueTest.cpp  DownloadedStackTest.cpp  RemoveQueueTest.cpp  UploadQueueTest.cpp
tests/unit/src/UsersBack/: SantaclausTest.cpp  UsersBackClient.cpp  UsersBackClient.hpp  UsersBackTest.cpp
tests/unit/src/Utils/: UtilsTest.hpp
tests/unit/src/Utils/Date/: Date.cpp  Date.hpp
